
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- Login progress -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Quick Password"
        android:textSize="30dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        tools:layout_height="?android:attr/windowTitleSize"
        android:gravity="center_vertical"
        android:textAllCaps="false">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter a secure password of length 16.Your password can include alphabets,numbers and space.\nEg:- Valar Morghulis4"
        android:paddingLeft="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"

        android:paddingTop="50dp"
        android:paddingBottom="20dp">

    </TextView>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <EditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password2"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                />

        </LinearLayout>
    </ScrollView>

   <!-- <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:title="New Text"
            android:titleTextColor="#FFFFFF">
       !-->     <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:textAlignment="center"
                android:text="Setup Quick password"
                android:textSize="25dp"
                android:id="@+id/Setup_Quick_key"
                android:paddingLeft="2dp"
                android:textStyle="bold" />
        <!--</android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

-->
</LinearLayout>
